<resources>
    <string name="app_name">Movies</string>
    <string name="title_name">Movies list</string>
    <string name="story_line_text">
        After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos\'
        actions and restore balance to the universe.
    </string>
    <string name="story_line">Storyline</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="age_limits">13+</string>
    <string name="movie_age_limits_text">%1$s+</string>
    <string name="cast">Cast</string>
    <string name="back_button">Back</string>
    <string name="movie_reviews_text">%1$s REVIEWS</string>
    <string name="movie_duration_text">%1$s MIN</string>
    <string name="avengers_genre">Action, Adventure, Fantasy</string>
    <string name="avengers_reviews">125 REVIEWS</string>
    <string name="avengers_details_reviews">125 REVIEWS</string>
    <string name="avengers_title">Avengers: End Game</string>
    <string name="avengers_duration">127 MIN</string>
    <string name="no_overview_text">No overview yet.</string>
    <string name="actors_loading_issue">
        Warning!\nThere was a problem to load a list of actors. Please, try to refresh the page.
    </string>
    <string name="movies_loading_issue">
        Warning!\nThere was a problem to load a list of movies. Please, try to refresh the page.
    </string>

    <string name="channel_new_movies">New movies</string>
    <string name="channel_new_movies_description">New incoming movies.</string>
    <string name="channel_new_movies_content_text">Don\'t miss this new movie !</string>

    <string name="search_query_hint">Enter movie\'s name …</string>
    <string name="search_error">Something went wrong when downloading videos. Please, check your connection and try again.</string>
    <string name="empty_content">No results matching your query</string>
    <string name="empty_query">Start typing in a search bar to find a movie</string>
    <string name="details_load_error">Something went wrong when loading details.\nPlease, check your connection and refresh the page.</string>
    <string name="movies_load_error">Something went wrong when loading movies.\nPlease, check your connection and refresh the page.</string>
    <string name="movies_empty_content">No movies were found.\nPlease, try to refresh the page.</string>
    <string name="try_again_btn">Try again</string>

</resources>