<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:foreground="@drawable/movie_image_gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <TextView
            android:id="@+id/back_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/back_button"
            android:textColor="@color/back_button"
            android:textSize="@dimen/back_button"
            app:drawableStartCompat="@drawable/back"
            android:drawablePadding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toEndOf="@+id/guideVerticalBegin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_age_limits"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="222dp"
            tools:text="@string/age_limits"
            android:textSize="@dimen/age_limits"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/age_limits"
            android:background="@drawable/rounded_square"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideVerticalBegin"/>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/movie_name"
            android:textColor="@color/movie_name"
            android:textSize="@dimen/movie_name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideVerticalBegin"
            app:layout_constraintEnd_toStartOf="@+id/guideVerticalEnd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:text="@string/avengers_genre"
            android:textColor="@color/genre"
            android:textSize="@dimen/avengers_details_genre"
            app:layout_constraintStart_toStartOf="@id/guideVerticalBegin"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintTop_toBottomOf="@id/movie_name"
            app:layout_constraintBottom_toTopOf="@id/barrierHorizontalGenreTop" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHorizontalGenreTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_genre"
            />

        <ImageView
            android:id="@+id/movie_star_1"
            style="@style/RatingRedStar"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toStartOf="@id/guideVerticalBegin"
            app:layout_constraintEnd_toStartOf="@+id/movie_star_2"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_star_2"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            style="@style/RatingRedStar"
            app:layout_constraintStart_toEndOf="@+id/movie_star_1"
            app:layout_constraintEnd_toStartOf="@id/movie_star_3"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_star_3"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            style="@style/RatingRedStar"
            app:layout_constraintStart_toEndOf="@id/movie_star_2"
            app:layout_constraintEnd_toStartOf="@id/movie_star_4"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_star_4"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            style="@style/RatingRedStar"
            app:layout_constraintStart_toEndOf="@id/movie_star_3"
            app:layout_constraintEnd_toStartOf="@id/movie_star_5"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_star_5"
            android:layout_marginStart="2dp"
            style="@style/RatingGreyStar"
            app:layout_constraintStart_toEndOf="@id/movie_star_4"
            app:layout_constraintEnd_toStartOf="@id/movie_reviews"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/movie_reviews"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="@string/avengers_details_reviews"
            android:textSize="@dimen/reviews"
            android:textStyle="bold"
            android:textColor="@color/reviews"
            app:layout_constraintStart_toEndOf="@id/movie_star_5"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalGenreTop"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalRatingTop"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHorizontalRatingTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_reviews"/>

        <TextView
            android:id="@+id/movie_story_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/story_line"
            android:textSize="@dimen/story_line"
            android:textColor="@color/story_line"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideVerticalBegin"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintTop_toTopOf="@id/barrierHorizontalRatingTop"
            app:layout_constraintBottom_toTopOf="@id/movie_story_line_text"/>

        <TextView
            android:id="@+id/movie_story_line_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/story_line_text"
            android:textSize="@dimen/story_line_text"
            android:textColor="@color/story_line_text"
            android:lineSpacingExtra="@dimen/storyline_line_height"
            app:layout_constraintStart_toStartOf="@id/guideVerticalBegin"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintTop_toBottomOf="@id/movie_story_line"
            app:layout_constraintBottom_toBottomOf="@id/barrierHorizontalStoryTop"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHorizontalStoryTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_story_line_text" />

        <TextView
            android:id="@+id/movie_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="7dp"
            android:text="@string/cast"
            android:textSize="@dimen/cast"
            android:textColor="@color/cast"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideVerticalBegin"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintTop_toBottomOf="@id/barrierHorizontalStoryTop"
            app:layout_constraintBottom_toTopOf="@id/barrierHorizontalCastTop"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHorizontalCastTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_recycler_view_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideVerticalEnd"
            app:layout_constraintStart_toEndOf="@+id/guideVerticalBegin"
            app:layout_constraintTop_toBottomOf="@+id/barrierHorizontalCastTop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>